--- a/app/src/main/res/layout/photo_collection_item.xml
+++ b/app/src/main/res/layout/photo_collection_item.xml
@@ -1,12 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="50dp"
-    android:layout_height="50dp"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:padding="5dp"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintDimensionRatio="1:1"
         app:cardCornerRadius="10dp"
         >
 
@@ -14,11 +18,12 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:id="@+id/photo_item_IMG_inner_image"
-            android:background="@android:color/holo_green_light"
+            android:background="@android:color/darker_gray"
+            android:scaleType="centerCrop"
             android:contentDescription="@string/gallery"
             />
 
 
     </androidx.cardview.widget.CardView>
 
-</RelativeLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
