--- a/app/src/main/res/layout/activity_add_event.xml
+++ b/app/src/main/res/layout/activity_add_event.xml
@@ -165,7 +165,7 @@
                 android:lines="1"
                 android:padding="20dp"
                 app:layout_constraintTop_toBottomOf="@id/add_event_LBL_start_time"
-                android:text="@string/example_hour"
+                android:text="@string/add_event_hour_empty"
                 android:id="@+id/add_event_BTN_start_time"
                 />
 
@@ -193,7 +193,7 @@
                 android:lines="1"
                 android:padding="20dp"
                 app:layout_constraintTop_toBottomOf="@id/add_event_LBL_end_time"
-                android:text="@string/example_hour"
+                android:text="@string/add_event_hour_empty"
                 android:id="@+id/add_event_BTN_end_time"
                 />
 
