--- a/app/src/main/res/layout/activity_calendar.xml
+++ b/app/src/main/res/layout/activity_calendar.xml
@@ -54,6 +54,7 @@
             android:layout_height="0dp"
             app:layout_constraintHeight_percent="0.5"
             app:layout_constraintTop_toBottomOf="@id/calendar_LBL_selected_day"
+            app:layout_constraintBottom_toBottomOf="parent"
             android:id="@+id/calendar_RCY_daily_events"
             android:layout_margin="10dp"
             />
